adds the ckeditor.create for displaying the comment section

--- a/templates/post.html
+++ b/templates/post.html
@@ -45,6 +45,7 @@
             <!-- Comments Form -->
             <form action="{{ url_for('get_each_post', post_id=post.id) }}" method="POST">
                 {{ ckeditor.config(name='comment', value='', width='100%') }}
+                {{ ckeditor.create('comment') }}
                 <button type="submit" class="submit-btn">Add Comment</button>
             </form>
 
