--- a/templates/post.html
+++ b/templates/post.html
@@ -43,7 +43,7 @@
             <h2>Comments</h2>
 
             <!-- Comments Form -->
-            {{ if current_user.is_authenticated }}
+            {% if current_user.is_authenticated %}
             <form action="{{ url_for('get_each_post', post_id=post.id) }}" method="POST">
                 {{ ckeditor.config(name='comment', value='', width='100%') }}
                 {{ ckeditor.create('comment') }}
