--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -27,7 +27,7 @@
                     <tr>
                         <td>{{ post.title }}</td>
                         <td>{{ post.subtitle }}</td>
-                        <td>{{ post.author }}</td>
+                        <td>{{ post.author.name }}</td>
                         <td>{{ post.date }}</td>
                         <td>
                             <a href="{{ url_for('edit_current_post', post_id=post.id) }}" class="btn-edit">Edit</a>
