--- a/templates/create-edit-post.html
+++ b/templates/create-edit-post.html
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label for="author">Author's Name</label>
-                <input type="text" id="author" name="author" value="{{ post_to_edit.author if post_to_edit else '' }}"  required>
+                <input type="text" id="author" name="author" value="{{ post_to_edit.author.name if post_to_edit else '' }}"  required>
             </div>
             <div class="form-group">
                 <label for="img_url">Image URL</label>
