changed the name of the website from my blog to blog

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <!-- header.html -->
     <div class="header">
         <div class="logo">
-            <a href="/">My Blog</a>
+            <a href="/">Blog</a>
         </div>
         <nav class="navbar">
             <ul>
