--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    
-    <link rel="stylesheet" href="{{ url_for('static', filename='/css/styles.css') }}">
+{% extends 'base.html' %}
 
-    <!-- Add Bootstrap CSS for styling and carousel -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-
-  {% include "header.html" %}
+{% include "header.html" %}
   
   <div class="container">
     <!-- Blog Carousel for Latest Posts -->
