--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,7 @@
 
 {% block title %}Home{% endblock %}
 
-{% include "header.html" %}
-  
+{% block content %}  
   <div class="container">
     <!-- Blog Carousel for Latest Posts -->
     <div id="blogCarousel" class="carousel slide" data-ride="carousel">
@@ -59,22 +58,4 @@
     </div>
 </div>
 
-    {% include "footer.html" %}
-
-     <!-- Add Bootstrap and jQuery Scripts for Carousel -->
-     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-     <script>
-        const menuIcon = document.getElementById('menu-icon');
-        const navbar = document.querySelector('.navbar ul');
-    
-        menuIcon.addEventListener('click', () => {
-            menuIcon.classList.toggle('active');
-            navbar.classList.toggle('active');
-        });
-    </script>
-    
-</body>
-</html>
+{% endblock %}
