--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,13 @@
    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     
    <!-- Link to the CSS styling -->
-   <link rel="stylesheet" href="{{ url_for('static', filename='/css/styles.css') }}">
+   <link rel="stylesheet" href="{{ url_for('static', filename='/css/style.css') }}">
 
    <!-- Add Bootstrap CSS for styling and carousel -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- CKEditor Script -->
+    {{ ckeditor.load() }}
 </head>
 <body>
 
@@ -23,6 +26,7 @@
     {% include 'footer.html' %}
 
      <!-- Add Bootstrap and jQuery Scripts for Carousel -->
+     <script src="{{ url_for('static', filename='/js/Scripts.js') }}"></script>
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
