--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page_title }}</title>
-     <!-- Font Awesome icons (free version)-->
-     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
-</head>
-<body>
-   
-    {% include "header.html" %}
+{% extends 'base.html' %}
+
+{% block title %} {{page_title}} {% endblock %}
+
+{% block content %} 
 
     <div class="login-container">
         <div class="login-box">
@@ -59,7 +51,4 @@
         </div>
     </div>
 
-    {% include "footer.html" %}
-
-</body>
-</html>
+{% endblock %}
