removed the extra spaces after the start of block content

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Post{% endblock %}
 
-{% block content %} 
+{% block content %}
     
     <main class="post-container">
         <article class="post-content">
