--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-     <!-- Font Awesome icons (free version)-->
-     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/contact.css') }}">
-</head>
-<body>
+{% extends 'base.html' %}
 
-    {% include 'header.html' %}
+{% block title %}Contact{% endblock %}
+
+{% block content %} 
 
     <div class="contact-container">
         <div class="contact-box">
@@ -37,7 +29,4 @@
         </div>
     </div>
 
-    {% include 'footer.html' %}
-
-</body>
-</html>
+{% endblock %}
