--- a/templates/about.html
+++ b/templates/about.html
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='/css/styles.css') }}">
-    
-</head>
-<body>
+{% extends 'base.html' %}
 
-    {% include "header.html" %}
-    
+{% block title %}About{% endblock %}
+
+{% block content %}  
         <div class="heading">
             <h1>About Me</h1>
         </div>
@@ -40,7 +30,4 @@
             </section>
         </div>
 
-    {% include "footer.html" %}
-
-</body>
-</html>
+{% endblock %}
