--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,26 @@
 
     {% include 'footer.html' %}
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const menuIcon = document.getElementById('menu-icon');
+            const navbar = document.querySelector('.navbar ul');
+    
+            if (menuIcon && navbar) {
+                menuIcon.addEventListener('click', () => {
+                    console.log("Menu icon clicked");
+                    menuIcon.classList.toggle('active');
+                    navbar.classList.toggle('active');
+                });
+            } else {
+                console.error("Menu icon or navbar not found in the DOM");
+            }
+        });
+    </script>
+    
+
      <!-- Add Bootstrap and jQuery Scripts for Carousel -->
-     <script src="{{ url_for('static', filename='/js/Scripts.js') }}"></script>
+     <!-- <script src="{{ url_for('static', filename='/js/scripts.js') }}"></script> -->
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
