updated style.css -- Remove this selector as .menu-icon and .navbar ul are not direct siblings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,13 +119,17 @@ footer .footer-info p {
         padding: 10px 0;
     }
 
+    .header .navbar ul.active {
+        display: flex;
+    }
+
     .header .menu-icon {
         display: flex;
     }
 
-    .header .menu-icon.active + .navbar ul {
+    /* .header .menu-icon.active + .navbar ul {
         display: flex;
-    }
+    } */
 
     footer {
         font-size: 0.9rem;
