updates the README.md -- uncomments the input field for password confirmation

--- a/templates/login.html
+++ b/templates/login.html
@@ -31,12 +31,12 @@
                     <input type="password" id="password" name="password" required>
                 </div>
 
-                <!-- {% if page_title == 'Sign Up' %}
+                {% if page_title == 'Sign Up' %}
                     <div class="input-group">
                         <label for="confirm_password">Confirm Password:</label>
                         <input type="password" id="confirm_password" name="confirm_password" required>
                     </div>
-                {% endif %} -->
+                {% endif %}
 
                 <button type="submit">{{ page_title }}</button>
             </form>
